--- a/Veterinario/reportes.html
+++ b/Veterinario/reportes.html
@@ -362,7 +362,7 @@
               },
               title: {
                 display: true,
-                text: "Hematología",
+                text: "Parasitologia",
               },
             },
           },
@@ -379,7 +379,7 @@
               },
               title: {
                 display: true,
-                text: "Parasitología",
+                text: "Hematologia",
               },
             },
           },
