--- a/pages/index.html
+++ b/pages/index.html
@@ -24,7 +24,7 @@
           <br><br>
           <div><input type="checkbox" class="rell" id="perfil"> </input></div>
           <div class="divadmin">
-          <p class="admin">¿Eres veterinario?</p>
+          <p class="admin" style="margin-right: -50px;">¿Eres veterinario?</p>
 </div>
           
           <button type="button" class="btn btn-primary">Iniciar sesión</button>
